# GX-Plug

./: .gitignore  CMakeLists.txt  README.md  README.md.bak  autoBuild.sh  index.md  labelPropagation.txt  res.txt
algo/: CMakeLists.txt
algo/BellmanFord/: BellmanFord.cpp  BellmanFord.h  BellmanFordFPGA.cpp  BellmanFordFPGA.h  BellmanFordFPGA_impl.cpp  BellmanFordGPU.cpp  BellmanFordGPU.h  BellmanFordGPU_impl.cpp  BellmanFord_impl.cpp  CMakeLists.txt
algo/BellmanFord/fpga_kernel/: Makefile  config.h  demo.mk  gs_top.cpp
algo/BellmanFord/kernel_src/: BellmanFordGPU_kernel.cu  BellmanFordGPU_kernel.h
algo/ConnectedComponent/: CMakeLists.txt  ConnectedComponent.cpp  ConnectedComponent.h  ConnectedComponentGPU.cpp  ConnectedComponentGPU.h  ConnectedComponentGPU_impl.cpp  ConnectedComponent_impl.cpp
algo/ConnectedComponent/kernel_src/: ConnectedComponentGPU_kernel.cu
algo/DDFS/: DDFS.cpp  DDFS.h  DDFS_impl.cpp
algo/JumpIteration/: CMakeLists.txt  JumpIteration.cpp  JumpIteration.h  JumpIteration_impl.cpp
algo/LabelPropagation/: CMakeLists.txt  LabelPropagation.cpp  LabelPropagation.h  LabelPropagationGPU.cpp  LabelPropagationGPU.h  LabelPropagationGPU_impl.cpp  LabelPropagation_impl.cpp
algo/LabelPropagation/kernel_src/: LabelPropagationGPU_kernel.cu  LabelPropagationGPU_kernel.h
algo/PageRank/: CMakeLists.txt  PageRank.cpp  PageRank.h  PageRankFPGA.cpp  PageRankFPGA.h  PageRankGPU.cpp  PageRankGPU.h  PageRankGPU_impl.cpp  PageRank_impl.cpp  PageRankeFPGA_impl.cpp
algo/PageRank/kernel_src/: PageRankGPU_kernel.cu  PageRankGPU_kernel.h
algo/StronglyConnectedComponent/: CMakeLists.txt  StronglyConnectedComponent.cpp  StronglyConnectedComponent.h  StronglyConnectedComponent_impl.cpp
core/: AbstractGraph.cpp  AbstractGraph.h  CMakeLists.txt  Graph.cpp  Graph.h  GraphUtil.cpp  GraphUtil.h  GraphUtil_impl.cpp  Graph_impl.cpp  MessageSet.cpp  MessageSet.h  MessageSet_impl.cpp
core/impl/: GraphUtil_impl.cpp  Graph_impl.cpp  MessageSet_impl.cpp
fpgaTest/: CMakeLists.txt  main_sssp.cpp
include/: GPUconfig.h  TIsExtended.h  UNIX_macro.h  UNIX_marco.h  deps.h
srv/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  UNIX_msg.cpp  UNIX_msg.h  UNIX_shm.h  UtilClient.cpp  UtilClient.cpp~  UtilClient.h  UtilServer.cpp  UtilServer.cpp~  UtilServer.h  UtilServer_impl.cpp  UtilServer_implGPU.cpp
srv/impl/: UtilClient_impl.cpp  UtilServer_impl.cpp  UtilServer_implGPU.cpp
test/: BellmanFordGPUTest.cpp  BellmanFordTest.cpp  CMakeLists.txt  ConnectedComponentGPUTest.cpp  ConnectedComponentTest.cpp  DDFSTest.cpp  GraphAccessTest.cpp  GraphUtilTest.cpp  LabelPropagationGPUTest.cpp  LabelPropagationTest.cpp  PageRankGPUTest.cpp  PageRankTest.cpp  SRVTest_cli.cpp  SRVTest_srv.cpp  UtilClientTest.cpp  UtilClientTest_BFJump.cpp  UtilClientTest_BFOptimize.cpp  UtilClientTest_BFOptimizePartition.cpp  UtilClientTest_JumpIteration.cpp  UtilClientTest_LabelPropagation.cpp  UtilClientTest_LabelPropagationPartition.cpp  UtilClientTest_PageRank.cpp  UtilServerTest_BellmanFord.cpp  UtilServerTest_BellmanFordGPU.cpp  UtilServerTest_ConnectedComponent.cpp  UtilServerTest_ConnectedComponentGPU.cpp  UtilServerTest_JumpIteration.cpp  UtilServerTest_LabelPropagation.cpp  UtilServerTest_LabelPropagationGPU.cpp  UtilServerTest_PageRank.cpp  UtilServerTest_PageRankGPU.cpp  clientRunTest_100k_2m.sh  ipcrm.sh  serverRunTest_100k_2m.sh  serverRunTest_100k_2m_CPU.sh  serverRunTest_10_30.sh  serverRunTest_BFJ.sh  serverRunTest_BFOP.sh
tool/: CMakeLists.txt  RandGraphGen.cpp  UK2007GraphProcessing.cpp  WRNGraphProcessing.cpp
util/: CMakeLists.txt
v2.2-PowerGraph/: Dockerfile
v2.3-PowerGraph/: Dockerfile
v3.0-GraphX/: Dockerfile
v3.0-PowerGraph/: Dockerfile
v3.1-PowerGraph/: Dockerfile
